# incident-intelligence

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
config/: class_config.json
data/: generate.py  incident_root_cause_data.csv  validation.py
notebooks/: 01_data_generation.ipynb  02_eda.ipynb  03_baseline_model.ipynb  04_model_explainability.ipynb
scripts/: Makefile  evaluate.py  explain.py  generate_dataset.py  run_pipeline.py  train.py
src/: __init__.py  data_generation.py  validate_data_generated.py
src/incident_intelligence/: settings.py
src/incident_intelligence/cli/: evaluate.py  explain.py  generator.py  pipeline.py  train.py
src/incident_intelligence/data/: generator.py
src/incident_intelligence/modeling/: baseline.py  evaluate.py  explain.py  predict.py  train.py
