[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "incident-intelligence"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pandas",
  "scipy",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
incident-generate = "incident_intelligence.cli.generator:main"
incident-train = "incident_intelligence.cli.train:main"
incident-eval = "incident_intelligence.cli.evaluate:main"
incident-explain = "incident_intelligence.cli.explain:main"
incident-pipeline = "incident_intelligence.cli.pipeline:main"